--- a/css/TC.css
+++ b/css/TC.css
@@ -12,7 +12,7 @@ body {
 
 header {
     text-align: center;
-    padding: 20px;
+    margin-bottom: 20px;
     background-color: #333;
     color: #fff;
 }
